creating vector store

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "        self,\n",
     "        api_key,\n",
     "        model: str = 'gpt-3.5-turbo',\n",
-    "        persist_dir: str = \"/tmp\"\n",
+    "        persist_dir: str = \"tmp\"\n",
     "    ):\n",
     "\n",
     "        self.model = model\n",
@@ -84,7 +84,7 @@
     "            prompt_helper = prompt_helper\n",
     "        )\n",
     "\n",
-    "        documents = SimpleDirectoryReader(input_files=input_files).load_data()\n",
+    "        documents = SimpleDirectoryReader(input_files).load_data()\n",
     "\n",
     "        index = VectorStoreIndex.from_documents(\n",
     "            documents, \n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,35 +160,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0j/d0xd373d2tb7zdzcsqrk3mpw0000gn/T/ipykernel_84751/278325373.py:48: DeprecationWarning: Call to deprecated class method from_defaults. (ServiceContext is deprecated, please use `llama_index.settings.Settings` instead.) -- Deprecated since version 0.10.0.\n",
+      "/var/folders/0j/d0xd373d2tb7zdzcsqrk3mpw0000gn/T/ipykernel_27153/607528180.py:48: DeprecationWarning: Call to deprecated class method from_defaults. (ServiceContext is deprecated, please use `llama_index.settings.Settings` instead.) -- Deprecated since version 0.10.0.\n",
       "  service_context = ServiceContext.from_defaults(\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "File butil/tmp/ does not exist.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mprovider\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreate_index\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[15], line 55\u001b[0m, in \u001b[0;36mRAGProvider.create_index\u001b[0;34m(self, separator, chunk_size, chunk_overlap, prompt_context_window, num_output, chunk_overlap_ratio, chunk_size_limit, input_files)\u001b[0m\n\u001b[1;32m     41\u001b[0m prompt_helper \u001b[38;5;241m=\u001b[39m PromptHelper(\n\u001b[1;32m     42\u001b[0m     context_window \u001b[38;5;241m=\u001b[39m prompt_context_window, \n\u001b[1;32m     43\u001b[0m     num_output \u001b[38;5;241m=\u001b[39m num_output, \n\u001b[1;32m     44\u001b[0m     chunk_overlap_ratio \u001b[38;5;241m=\u001b[39m chunk_overlap_ratio, \n\u001b[1;32m     45\u001b[0m     chunk_size_limit \u001b[38;5;241m=\u001b[39m chunk_size_limit\n\u001b[1;32m     46\u001b[0m )\n\u001b[1;32m     48\u001b[0m service_context \u001b[38;5;241m=\u001b[39m ServiceContext\u001b[38;5;241m.\u001b[39mfrom_defaults(\n\u001b[1;32m     49\u001b[0m     llm \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mllm,\n\u001b[1;32m     50\u001b[0m     embed_model \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39membed_model,\n\u001b[1;32m     51\u001b[0m     node_parser \u001b[38;5;241m=\u001b[39m node_parser,\n\u001b[1;32m     52\u001b[0m     prompt_helper \u001b[38;5;241m=\u001b[39m prompt_helper\n\u001b[1;32m     53\u001b[0m )\n\u001b[0;32m---> 55\u001b[0m documents \u001b[38;5;241m=\u001b[39m \u001b[43mSimpleDirectoryReader\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_files\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minput_files\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mload_data()\n\u001b[1;32m     57\u001b[0m index \u001b[38;5;241m=\u001b[39m VectorStoreIndex\u001b[38;5;241m.\u001b[39mfrom_documents(\n\u001b[1;32m     58\u001b[0m     documents, \n\u001b[1;32m     59\u001b[0m     service_context \u001b[38;5;241m=\u001b[39m service_context\n\u001b[1;32m     60\u001b[0m )\n\u001b[1;32m     62\u001b[0m index\u001b[38;5;241m.\u001b[39mstorage_context\u001b[38;5;241m.\u001b[39mpersist(persist_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpersist_dir)\n",
-      "File \u001b[0;32m~/miniconda3/envs/RAG/lib/python3.11/site-packages/llama_index/core/readers/file/base.py:207\u001b[0m, in \u001b[0;36mSimpleDirectoryReader.__init__\u001b[0;34m(self, input_dir, input_files, exclude, exclude_hidden, errors, recursive, encoding, filename_as_id, required_exts, file_extractor, num_files_limit, file_metadata, fs)\u001b[0m\n\u001b[1;32m    205\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m path \u001b[38;5;129;01min\u001b[39;00m input_files:\n\u001b[1;32m    206\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfs\u001b[38;5;241m.\u001b[39misfile(path):\n\u001b[0;32m--> 207\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m does not exist.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    208\u001b[0m     input_file \u001b[38;5;241m=\u001b[39m _Path(path)\n\u001b[1;32m    209\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minput_files\u001b[38;5;241m.\u001b[39mappend(input_file)\n",
-      "\u001b[0;31mValueError\u001b[0m: File butil/tmp/ does not exist."
      ]
     }
    ],
    "source": [
     "provider.create_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "documents = SimpleDirectoryReader(\"butil/tmp/\").load_data()"
    ]
   },
   {
