another technique for evaluation

--- a/src/evaluation/eval.ipynb
+++ b/src/evaluation/eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
       "3232 \n",
       "\n",
       "<class 'llama_index.core.schema.Document'>\n",
-      "Doc ID: 3be96b27-5994-4722-8ca6-74445586fa41\n",
+      "Doc ID: 72e47d34-085f-45e5-8e94-3bbbd7444fa7\n",
       "Text: 12 'O' Clock Theatrical release poster Directed by Ram Gopal\n",
       "Varma Produced by Ram Gopal Varma Starring Mithun Chakraborty Makarand\n",
       "Deshpande Flora Saini Manav Kaul Krishna Gautam CinematographyAmol\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,14 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0j/d0xd373d2tb7zdzcsqrk3mpw0000gn/T/ipykernel_33430/3058746696.py:7: DeprecationWarning: Call to deprecated class method from_defaults. (ServiceContext is deprecated, please use `llama_index.settings.Settings` instead.) -- Deprecated since version 0.10.0.\n",
+      "/var/folders/0j/d0xd373d2tb7zdzcsqrk3mpw0000gn/T/ipykernel_99895/3058746696.py:7: DeprecationWarning: Call to deprecated class method from_defaults. (ServiceContext is deprecated, please use `llama_index.settings.Settings` instead.) -- Deprecated since version 0.10.0.\n",
       "  service_context = ServiceContext.from_defaults(\n"
      ]
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -186,9 +186,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🦑 Tru initialized with db url sqlite:///default.sqlite .\n",
+      "🛑 Secret keys may be written to the database. See the `database_redact_keys` option of Tru` to prevent this.\n"
+     ]
+    }
+   ],
    "source": [
     "from trulens_eval import Tru\n",
     "tru = Tru()\n",
@@ -1170,6 +1179,516 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Auto-merging retrieval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ In Answer Relevance, input prompt will be set to __record__.main_input or `Select.RecordInput` .\n",
+      "✅ In Answer Relevance, input response will be set to __record__.main_output or `Select.RecordOutput` .\n",
+      "✅ In Context Relevance, input prompt will be set to __record__.main_input or `Select.RecordInput` .\n",
+      "✅ In Context Relevance, input response will be set to __record__.app.query.rets.source_nodes[:].node.text .\n",
+      "✅ In Groundedness, input source will be set to __record__.app.query.rets.source_nodes[:].node.text .\n",
+      "✅ In Groundedness, input statement will be set to __record__.main_output or `Select.RecordOutput` .\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils import build_automerging_index\n",
+    "\n",
+    "automerging_index = build_automerging_index(\n",
+    "    documents,\n",
+    "    llm,\n",
+    "    embed_model=\"local:BAAI/bge-small-en-v1.5\",\n",
+    "    save_dir=\"merging_index\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import get_automerging_query_engine\n",
+    "\n",
+    "automerging_query_engine = get_automerging_query_engine(\n",
+    "    automerging_index,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from trulens_eval import Tru\n",
+    "from utils import get_prebuilt_trulens_recorder\n",
+    "\n",
+    "tru = Tru()\n",
+    "\n",
+    "tru.reset_database()\n",
+    "\n",
+    "tru_recorder_automerging = get_prebuilt_trulens_recorder(automerging_query_engine,\n",
+    "                                                         app_id=\"Automerging Query Engine\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tell me a movie that where the main character is food delivery rider\n",
+      "Indoo Ki Jawani\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3b18363367874258ade48e7469960e5d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Groundedness per statement in source:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3eeb2f654064416598cee8bd29731a96",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Groundedness per statement in source:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> Merging 6 nodes into parent node.\n",
+      "> Parent node id: 61218fa6-5a82-4706-8b51-af3e80c68819.\n",
+      "> Parent node text: Y o d h a\n",
+      "Theatrical release poster\n",
+      "Directed by Sagar Ambre\n",
+      "Pushkar Ojha\n",
+      "Written by Sagar Ambre\n",
+      "P...\n",
+      "\n",
+      "Who's the male actor in Yodha movie?\n",
+      "Sidharth Malhotra\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5ee6ec7c3c6d4eca93c02aba14d4aa1e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Groundedness per statement in source:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b03640c30c0d45b3848aeb1ca71136e5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Groundedness per statement in source:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Which movies grossed grossed  ₹237.44  crore?\n",
+      "The movie that grossed ₹237.44 crore is \"Tu Jhoothi Main Makkaar\".\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eaf88ff2d4bc43af9e07b0ef33aecd62",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Groundedness per statement in source:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "19eff7b5fb474b94a5cd9b3ce14f0ab1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Groundedness per statement in source:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> Merging 1 nodes into parent node.\n",
+      "> Parent node id: 99091977-52cc-44bd-a4c2-a29f24c1b1e4.\n",
+      "> Parent node text: Vadh (https://m.imdb.com/title/tt10233718/) at IMDb\n",
+      "Retrieved from \"https://en.wikipedia.org/w/in...\n",
+      "\n",
+      "> Merging 1 nodes into parent node.\n",
+      "> Parent node id: f7059bb4-7d5c-4624-b435-d0c2f53f3a9b.\n",
+      "> Parent node text: Vadh (https://m.imdb.com/title/tt10233718/) at IMDb\n",
+      "Retrieved from \"https://en.wikipedia.org/w/in...\n",
+      "\n",
+      "Which movies has track Arjan Vailly?\n",
+      "The movie \"Animal\" has a track titled \"Arjan Vailly.\"\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6f808cda0c0d4266992f84df27bfc467",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Groundedness per statement in source:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "be1d22cfdbc5407db1cd947bbe551581",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Groundedness per statement in source:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> Merging 2 nodes into parent node.\n",
+      "> Parent node id: b08742d0-30d9-47f5-9c0b-dce5e75af263.\n",
+      "> Parent node text: [144] It became the first Hindi film to net over ₹200\n",
+      "crore in 3 days domestically, overtaking Pa...\n",
+      "\n",
+      "Which movie made second highest on opening day after Jawan?\n",
+      "Animal made the second highest on opening day after Jawan.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "494fda4b00a24fa5b15bfd382011bcb2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Groundedness per statement in source:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bafde4586e7a48a2a30638cc24e4adcd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Groundedness per statement in source:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Which movie has song Dil Jhoom?\n",
+      "The movie that features the song \"Dil Jhoom\" is \"Dil\".\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0826bfeaaf0a499c955614c0d10ffdd9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Groundedness per statement in source:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fadcdc12a8f4476998adb90ef0d49359",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Groundedness per statement in source:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Which film was premiered on Netflix from 19 April 2024?\n",
+      "The film premiered on Netflix from 19 April 2024 is \"Article 370.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "for question in eval_questions:\n",
+    "    with tru_recorder_automerging as recording:\n",
+    "        response = automerging_query_engine.query(question)\n",
+    "        print(question)\n",
+    "        print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0a7b6da29a6843e58add10380ded9f60",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Groundedness per statement in source:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Groundedness</th>\n",
+       "      <th>Context Relevance</th>\n",
+       "      <th>Answer Relevance</th>\n",
+       "      <th>latency</th>\n",
+       "      <th>total_cost</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>app_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Automerging Query Engine</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.425</td>\n",
+       "      <td>0.633333</td>\n",
+       "      <td>4.571429</td>\n",
+       "      <td>0.000613</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Groundedness  Context Relevance  Answer Relevance  \\\n",
+       "app_id                                                                        \n",
+       "Automerging Query Engine      0.333333              0.425          0.633333   \n",
+       "\n",
+       "                           latency  total_cost  \n",
+       "app_id                                          \n",
+       "Automerging Query Engine  4.571429    0.000613  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tru.get_leaderboard(app_ids=[])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting dashboard ...\n",
+      "Config file already exists. Skipping writing process.\n",
+      "Credentials file already exists. Skipping writing process.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dee6dc0ad09f49568fe1b52f36877e16",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Accordion(children=(VBox(children=(VBox(children=(Label(value='STDOUT'), Output())), VBox(children=(Label(valu…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dashboard started at http://10.191.2.98:8501 .\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Popen: returncode: None args: ['streamlit', 'run', '--server.headless=True'...>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aa9cc589ab1043f6b08afcd8730192ac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Groundedness per statement in source:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# launches on http://localhost:8501/\n",
+    "tru.run_dashboard()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1193,7 +1712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
